# DirectX-Raytracing-Spheres-Demo

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Raytracing Spheres.sln  ShaderCompilation.cmake  Shaders.cfg  vcpkg.json
Cameras/: Cameras.vcxitems  OrbitCamera.cpp  OrbitCamera.h
Data/: AppData.h  AppData.ixx  Data.vcxitems  Data.vcxitems.filters
Raytracing Spheres/: App.cpp  App.cppm  BufferHelpers.ixx  Camera.h  Camera.ixx  ChromaticAberration.ixx  CommandList.ixx  D3DApp.cpp  D3DApp.cppm  D3DApp.h  DenoisedComposition.ixx  DeviceResources.cpp  DeviceResources.h  DeviceResources.ixx  DirectXRaytracingHelpers.h  DirectXRaytracingHelpers.ixx  DisplayHelpers.h  DisplayHelpers.ixx  ErrorHelpers.h  GraphicsMemoryEx.h  HaltonSamplePattern.ixx  ImGuiEx.h  Index.hlsli  JsonHelpers.h  Main.cpp  MainWindow.cpp  MainWindow.h  Material.h  Material.ixx  Materials.h  Materials.hlsli  Math.ixx  Model.ixx  MyAppData.cpp  MyAppData.h  MyPhysX.h  MyScene.ixx  NRD.ixx  PhysX.h  PhysXWrapper.h  (+33 more)
Raytracing Spheres/Shaders/: BxDFs.hlsli  Camera.hlsli  ChromaticAberration.hlsl  ColorHelpers.hlsli  Common.hlsli  DenoisedComposition.hlsl  GeometryIndexHelpers.hlsli  HitInfo.hlsli  HitRecord.hlsli  IndexHelpers.hlsli  IndirectRay.hlsli  Material.hlsli  Materials.hlsli  Math.hlsli  MathHelpers.hlsli  Normal.hlsli  Numbers.hlsli  PreDLSS.hlsl  PrimaryRay.hlsli  RadianceRay.hlsli  Random.hlsli  Ray.hlsli  Raytracing.hlsl  Raytracing.hlsli  RaytracingHelpers.hlsli  SelfIntersectionAvoidance.hlsli  Stack.hlsli  TemporalAntiAliasing.hlsl  TextureAlphaBlend.hlsl  TriangleMeshHelpers.hlsli  TriangleMeshIndexHelpers.hlsli  Utils.hlsli  Vertex.hlsli  VertexTypes.hlsli
Raytracing Spheres/Textures/: Earth.dds  Moon.dds
RaytracingHelpers/: RaytracingBufferHelpers.h  RaytracingGeometryHelpers.h  RaytracingHelpers.vcxitems
Shaders/: Bloom.hlsl  BxDF.hlsli  Camera.hlsli  ChromaticAberration.hlsl  Common.hlsli  DIFinalShading.hlsl  DIFusedSpatioTemporalResampling.hlsl  DIInitialSamplesGeneration.hlsl  DIInitialSampling.hlsl  DISpatialResampling.hlsl  DITemporalResampling.hlsl  DenoisedComposition.hlsl  Denoiser.hlsli  DirectIllumination.hlsl  GBufferGeneration.hlsl  HitInfo.hlsli  IndirectRay.hlsli  Light.hlsli  LightPreparation.hlsl  LocalLightPresampling.hlsl  Material.hlsli  Math.hlsli  Merge.hlsl  MeshHelpers.hlsli  MipmapGeneration.hlsl  NRDComposition.hlsl  NRDDenoiser.hlsli  Packing.hlsli  RTXDIAppBridge.hlsli  Raytracing.hlsl  Raytracing.hlsli  RaytracingHelpers.hlsli  ReGIRPresampling.hlsl  SHARC.hlsl  SelfIntersectionAvoidance.hlsli  ShadingHelpers.hlsli  SurfaceVectors.hlsli  TemporalAntiAliasing.hlsl  TriangleLight.hlsli  Vertex.hlsli
Source/: App.cpp  App.ixx  App.rc  Bloom.ixx  BufferHelpers.ixx  Camera.ixx  ChromaticAberration.ixx  CommandList.ixx  CommonShaderData.ixx  DenoisedComposition.ixx  Denoiser.ixx  DescriptorHeap.ixx  DeviceContext.ixx  DeviceResources.cpp  DeviceResources.ixx  DirectIllumination.ixx  DisplayHelpers.ixx  ErrorHelpers.ixx  Event.ixx  FSR.ixx  FormatHelpers.h  GBufferGeneration.ixx  GPUBuffer.ixx  GPUMemoryAllocator.ixx  GPUResource.ixx  HaltonSamplePattern.ixx  HaltonSampler.ixx  ImGuiEx.h  LightPreparation.ixx  Main.cpp  Material.ixx  Math.ixx  Merge.ixx  MipmapGeneration.ixx  Model.ixx  MyAppData.h  MyScene.ixx  NRD.ixx  NRDComposition.ixx  PhysX.h  (+26 more)
nv_helpers_dx12/: BottomLevelASGenerator.cpp  BottomLevelASGenerator.h  BottomLevelAccelerationStructureGenerator.cpp  BottomLevelAccelerationStructureGenerator.h  RaytracingPipelineGenerator.cpp  RaytracingPipelineGenerator.h  RootSignatureGenerator.cpp  RootSignatureGenerator.h  ShaderBindingTableGenerator.cpp  ShaderBindingTableGenerator.h  TopLevelASGenerator.cpp  TopLevelASGenerator.h  TopLevelAccelerationStructureGenerator.cpp  TopLevelAccelerationStructureGenerator.h  nv_helpers_dx12.vcxitems
